RESOLVED FIXED 203016
adoptRef DOMTimer in install instead of its constructor
https://bugs.webkit.org/show_bug.cgi?id=203016
Summary adoptRef DOMTimer in install instead of its constructor
Ryosuke Niwa
Reported 2019-10-15 17:25:29 PDT
Make DOMTimer less insane.
Attachments
Patch (5.01 KB, patch)
2019-10-15 17:26 PDT, Ryosuke Niwa
simon.fraser: review+
Ryosuke Niwa
Comment 1 2019-10-15 17:26:54 PDT
Ryosuke Niwa
Comment 2 2019-10-15 19:32:07 PDT
Radar WebKit Bug Importer
Comment 3 2019-10-15 19:33:17 PDT
Fujii Hironori
Comment 4 2019-10-16 02:11:50 PDT
Note You need to log in before you can comment on or make changes to this bug.