adoptRef DOMTimer in install instead of its constructor https://bugs.webkit.org/show_bug.cgi?id=203016

Reviewed by Simon Fraser.

Moved the code to add DOMTimer to ScriptExecutionContext's map to DOMTimer::install
instead of its constructor so that we can adoptRef there instead for clarity & simplicity.

* dom/ScriptExecutionContext.h:
(WebCore::ScriptExecutionContext::addTimeout):
* page/DOMTimer.cpp:
(WebCore::DOMTimer::DOMTimer):
(WebCore::DOMTimer::install):
(WebCore::DOMTimer::fired):


Canonical link: https://commits.webkit.org/216453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251177 268f45cc-cd09-0410-ab3c-d52691b4dbfc